client/src/App.css
@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap');


/*///////////
///GENERAL///
///////////*/

html, body {
  margin: 0;
  background-color: var(--blue);
}

.App {
  width: 100vw;
  margin: 0;
}

a {
  text-decoration: none;
  margin: 0;
}

h1, h3 {
  margin: 0;
  text-align: center;
}

:root {
  font-family: 'Quicksand', sans-serif;
  font-size: 1.25rem;
  letter-spacing: .05rem;
  --darkgray: #C4C4C4;
  --lightgray: #E5E5E5;
  --blue: #7CF4E6;
}

/*///////////////////
///LANDING PAGE//////
///////////////////*/

.Landing {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100vh;
  background-image: linear-gradient(var(--blue), var(--lightgray));
  color: black;
  margin: 0;
}

.Landing > * {
  height: 20%;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 75%;
}

/*//////////////////////
///PAGES - HIGH LEVEL///
//////////////////////*/

.About, .Projects, .Contact, .Blog {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  background-color: var(--blue);
  margin: 0;
  width: 100%;
}

/*/////////
//NAVBAR///
/////////*/

.Navbar {
  width: 100%;
  height: 10vh;
  background-color: black;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  margin: 0;
}

.Navbar a {
  display: flex;
  justify-content: center;
  align-items: center;
  color: #E5E5E5;
  font-weight: bold;
}

/*//////////////////////
//////// HEADER ////////
//////////////////////*/
.header {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  width: 100%;
  padding: 1em 0;
  background-image: linear-gradient(var(--blue), var(--lightgray));
}

.header > * {
  padding: .5em 0;
}

.header-bio-pic {
  display: inline-block;
  width: 30vw;
  height: 30vw;
  border-radius: 30vw;
  object-fit: cover;
  object-position: center;
  padding: 3em;
}


/*///////////////
//////ABOUT/////
///////////////*/


.bio {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  width: 100%;
  height: 20%;
  margin: 0;
  background-color: var(--blue);
  color: var(--lightgray);
}

.bio-pic {
  display: block;
  width: 30vw;
  height: 30vw;
  border-radius: 30vw;
  margin: 2em 0;
  object-fit: cover;
  min-height: 200px;
  min-width: 200px;
  max-height: 400px;
  max-width: 400px;
}

.bio-description {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  background-color: var(--darkgray);
  color: black;
  border-radius: 16px;
  width: 50%;
  padding: 2em;
  margin: 2em 0;
  line-height: 140%;
  min-width: 300px;
  max-width: 600px;
}

.bio-description > h1 {
  text-align: left;
}

/*//////////////
/////HOBBIES////
//////////////*/

.hobbies {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  width: 100%;
  background-color: var(--darkgray);
}

.hobby-pic {
  display: block;
  width: 15vw;
  height: 15vw;
  border-radius: 15vw;
  margin: 2em 0;
  background-repeat: round;
  background-color: var(--blue);
  min-width: 75px;
  min-height: 75px;
  max-width: 150px;
  max-height: 150px;
}

.parkour {
  background-image: url('./parkour.svg');

}

.languageLearning {
  background-image: url('./languageLearning.svg');
}

.travel {
  background-image: url('./travel.svg');
}

.meditation {
  background-image: url('./meditation.svg');
}

/*////////////////
/////EDUCATION////
////////////////*/


.education {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  background-color: var(--blue);
}

.education-title {
  margin: 1em 0;
}

.education-info {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 60%;
  min-width: 400px;
  min-height: 200px;
  border-radius: 16px;
  background-color: var(--darkgray);
  padding: 0 1em;
  margin: 2em 0;
  font-weight: bold;
}

.education-degree {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  padding: 1em;
}

.education-degree > p {
  margin: 0;
}

/*//////////////////////////
//////CERTIFICATES NAV//////
//////////////////////////*/

.certificatesNav {
  display: flex;
  justify-content: space-evenly;
  align-items: stretch;
  width: 100%;
  height: 10vh;
  background-color: var(--darkgray);
}

.btn-cert {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--darkgray);
  font-weight: bold;
  text-decoration: underline;
  width: 25%;
  margin: 0;
}

.btn-cert:hover, .btn-cert:focus {
  background-color: var(--lightgray);
  cursor: pointer;
}

@media (min-width: 640px) {
  .certificatesNav {
    height: 20vh;
  }
}

/*////////////////////////////
//////// CERTIFICATES ////////
////////////////////////////*/

.certificates {
  display: flex;
  flex-direction: column;
  width: 100%;
  margin: 0;
}

.imageWindow {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  overflow-x: scroll;
  overflow-y: hidden;
  width: 100%;
  background-color: var(--blue);
  margin: 0;
}

.portfolioImage {
  display: block;
  max-width: 90%;
  height: auto;
  margin: 0;
  padding: 1em;
}

.descriptionWindow {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  background-color: var(--lightgray);
  margin: 0;
}

.descriptionBody {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  width: 80%;
}

@media (min-width: 800px) {

  .certificates {
    flex-direction: row;
    max-height: 500px;
  }

  .imageWindow {
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    overflow-x: hidden;
    overflow-y: scroll;
  }

  .portfolioImage {
    max-width: 90%;
  }

}

